--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PointsAndMe</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
 </head>
+<body>
+    <button id="teacher">I'm a Teacher</button>
+    <button id="student">I'm a Student</button>
 
+    <input id="username" hidden class="login">
+    <input id="password" hidden class="login">
+    <button id="backToHome" hidden class="login">Go Back</button>
+    <button id="Submit" hidden class="login">Login</button>
+
+
+<!-- Stylesheets and scripts -->
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="./styles/main.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
+<script src="./scripts/main.js"></script>
+
+</body>
+</html>
