fixing merge conflicts

--- a/app/index.html
+++ b/app/index.html
@@ -37,11 +37,7 @@
         <input id="password" class="login form-control hidden">
     </div>
     <button id="backToHome" class="login btn btn-primary hidden">Go Back</button>
-    <button id="Submit" class="login btn btn-primary hidden">Login</button>
-    <input id="username" hidden class="login">
-    <input id="password" hidden class="login">
-    <button id="backToHome" hidden class="login">Go Back</button>
-    <button id="Submit" hidden class="login" onclick="authenticate()">Login</button>
+    <button id="Submit" class="login btn btn-primary hidden" onclick="authenticate()">Login</button>
 
 
 <!-- Stylesheets and scripts -->
