Retrieving names of students from database

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,18 @@
     </div>
     <button id="backToHome" class="login btn btn-primary hidden">Go Back</button>
     <button id="Submit" class="login btn btn-primary hidden" onclick="authenticate()">Login</button>
+    <button id="Login" class="login btn btn-primary hidden" onclick="logout()">Logout</button>
 
+    <br />
+    <br />
 
+    <ul id="students">
+        <li>Students and Names</li>
+    </ul>
 <!-- Stylesheets and scripts -->
 
 <script src="./scripts/main.js"></script>
 <script src="./scripts/authenticateFirebase.js"></script>
+<script src="./scripts/teacher.js"></script>
 </body>
 </html>
