Get history of all rewards claimed / pending

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,14 @@
     <ul id="students">
         <li>Students and Names</li>
     </ul>
+
+    <ul id="rewards">
+        <li>Rewards</li>
+    </ul>
+
+    <ul id="rewardHistory">
+        <li>Reward History</li>
+    </ul>
 <!-- Stylesheets and scripts -->
 
 <script src="./scripts/main.js"></script>
