--- a/app/teachersskeleton.htm
+++ b/app/teachersskeleton.htm
@@ -24,10 +24,10 @@
     <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase.js"></script>
 </head>
 
-<div id="classespage">
-<h1> Classes <h1>
 
 	<body>
+	<div id="classespage">
+	<h1> Classes <h1>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -48,14 +48,6 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
                  <li class="active">
-                  <!--      <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Products</a>
-                    </li>-->
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
 						<ul class="dropdown-menu" aria-labelledby="about-us">
@@ -81,9 +73,8 @@
     </nav>
 
 
-	<div class="jumbotron feature">
-		<div class="container">
-			<!-- DELETE <h1><span class="glyphicon glyphicon-equalizer"></span> Dramatically Engage</h1>-->
+	<div id="table-wrapper" >
+		<div id="table-scroll" class="container">
 			 <table style="width:100%">
 			  <tr>
 			    <th>Year</th>
@@ -104,8 +95,6 @@
 			    <td>  <button id="class2" type="button"><span class="glyphicon glyphicon-chevron-right"></button>  </td>
 			  </tr>
 			</table> 
-			<!-- DELETE <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p> -->
-			<!-- DELETE <p><a class="btn btn-default" href="#">Engage Now</a></p> -->
 		</div>
 	</div>
 
@@ -126,13 +115,6 @@
 
         <!-- Heading -->
         <div class="row">
-          <!-- DELETE   <div class="col-lg-12">
-                <h1 class="page-header">Superior Collaboration
-                    <small>Visualize Quality</small>
-                </h1>
-                <p>Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products.</p>
-            </div>
-        </div> -->
 
           <ul class="nav nav-tabs">
 		    <!-- <li class="active"><a href="#">Home</a></li> -->
@@ -250,77 +232,21 @@
 			    <td> Them, him, her they, Sally </td>
 			  </tr>
 			</table>
-		</div>
-		</div> <!--tab-contents -->
+		</div> <!--rewardslist -->
+	</div> <!--thecontent-->
 
-        <!-- /.row -->
 
-</div> <!-- classespage -->
+    </div> <!-- classespage -->
 
         <!-- Feature Row -->
-     <!-- DELETE   <div class="row">
-            <article class="col-md-4 article-intro">
-                <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
-                </a>
-                <h3>
-                    <a href="#">Efficiently Unleash</a>
-                </h3>
-                <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </article>
-            <article class="col-md-4 article-intro">
-                <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
-                </a>
-                <h3>
-                    <a href="#">Completely Synergize</a>
-                </h3>
-                <p>Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas.</p>
-            </article>
-
-            <article class="col-md-4 article-intro">
-                <a href="#">
-                    <img class="img-responsive img-rounded" src="holder.js/700x300" alt="">
-                </a>
-                <h3>
-                    <a href="#">Dynamically Procrastinate</a>
-                </h3>
-                <p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-            </article>
-        </div> -->
-        <!-- /.row -->
+ 
 
     </div>
     <!-- /.container -->
         
 	
 	<footer>
-		<!-- DELETE
-		<div class="footer-blurb">
-			<div class="container"> -->
-			<!-- DELETE	<div class="row">
-					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-fire"></span> Dynamically Procrastinate</h3>
-						<p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-						<p><a class="btn btn-default" href="#">Procrastinate</a></p>
-					</div>
-					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-cloud-upload"></span> Efficiently Unleash</h3>
-						<p>Dramatically maintain clicks-and-mortar solutions without functional solutions. Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. </p>
-						<p><a class="btn btn-default" href="#">Unleash</a></p>
-					</div>
-					<div class="col-sm-4 footer-blurb-item">
-						<h3><span class="glyphicon glyphicon-leaf"></span> Completely Synergize</h3>
-						<p>Professionally cultivate one-to-one customer service with robust ideas. Completely synergize resource taxing relationships via premier niche markets. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-						<p><a class="btn btn-default" href="#">Synergize</a></p>
-					</div>
 
-				</div> -->
-				<!-- /.row -->	
-			<!-- DELETE </div>
-        </div> -->
-
-        
         <div class="small-print">
         	<div class="container">
         		<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
